Archive2/12/130faaabb6caec/output
main.cpp: In function 'int main()':
main.cpp:11:15: error: 'f' was not declared in this scope
     f((N::T()));
               ^
main.cpp:11:15: note: suggested alternative:
main.cpp:3:10: note:   'N::f'
     auto f = [](const T&) {};
          ^
main.cpp:12:5: error: 'g' was not declared in this scope
     g<3>((N::T()));
     ^
main.cpp:12:5: note: suggested alternative:
main.cpp:6:10: note:   'N::g'
     void g(const T&) {}
          ^
