Archive2/12/130faaabb6caec/main.cpp
namespace N {
    struct T {};
    auto f = [](const T&) {};
    
    template <int N>
    void g(const T&) {}
}

int main()
{
    f((N::T()));
    g<3>((N::T()));
}